# codex-in-the-kernel

./: .gitignore  .gitmodules  Makefile  README.md  cilux_tui_client.py  package.json  pnpm-lock.yaml
.codex/skills/cilux-kernel-lab/: SKILL.md
.codex/skills/cilux-research-docs/: SKILL.md
.github/workflows/: pages.yml
cilux/: .gitignore  README.md
cilux/docs/: architecture.md
cilux/guest/: Cargo.toml
cilux/guest/crates/cilux-brokerd/: Cargo.toml
cilux/guest/crates/cilux-brokerd/src/: audit.rs  kernel.rs  main.rs  netlink.rs
cilux/guest/crates/cilux-common/: Cargo.toml
cilux/guest/crates/cilux-common/src/: lib.rs
cilux/guest/crates/cilux-mcp/: Cargo.toml
cilux/guest/crates/cilux-mcp/src/: catalog.rs  json_rpc.rs  main.rs  resources.rs  tools.rs
cilux/guest/crates/ciluxctl/: Cargo.toml
cilux/guest/crates/ciluxctl/src/: main.rs
cilux/tests/: app_server_e2e.py
cilux/vm/config/: kernel-arm64-cilux-minimal.config
cilux/vm/desktop/: codex-config.toml  install.sh  one-shot.sh  smoke.sh
cilux/vm/docker/: kernel-builder.Dockerfile
cilux/vm/host-include/: byteswap.h  elf.h
cilux/vm/scripts/: assemble-initramfs.sh  build-desktop-payload.sh  build-guest.sh  build-kernel.sh  codex-config.toml  common.sh  fetch-alpine.sh  fetch-codex.sh  fetch-zig.sh  init.sh  launch.sh  preflight.sh  run-e2e.sh  stop.sh  tui-client.py  (+1 more)
docs/: index.html  tsconfig.json  vite.config.ts
docs/research/: index.html
docs/src/: architecture.css  architecture.ts  content.ts  main.ts  research-content.ts  research.css  research.ts  styles.css
scripts/: deploy-docs.mjs
(+4 files in other folders)
